Set up pom for 0.6.0 release